tests/fails/builder_cant_recreate_streamhandler.stderr
error[E0599]: no method named `on_stream` found for struct `ActorBuilder<MyActor, hannibal::actor::restart_strategy::RecreateFromDefault>` in the current scope
  --> tests/fails/builder_cant_recreate_streamhandler.rs:21:10
   |
19 |       let addr = hannibal::setup_actor(MyActor("Caesar"))
   |  ________________-
20 | |         .recreate_from_default()
21 | |         .on_stream(stream::iter(vec![17, 19]))
   | |         -^^^^^^^^^ method not found in `ActorBuilder<MyActor, hannibal::actor::restart_strategy::RecreateFromDefault>`
   | |_________|
   |
   |
   = note: the method was found for
           - `ActorBuilder<A>`

error[E0282]: type annotations needed
  --> tests/fails/builder_cant_recreate_streamhandler.rs:23:5
   |
23 |     addr.await.unwrap();
   |     ^^^^^^^^^^ cannot infer type
